[package]
authors = ["Vesa Vilhonen <vesa@vilhonen.com>"]
categories = ["command-line-utilities"]
description = "Listen to your network traffic with"
edition = "2018"
license = "ISC"
name = "nethoscope"
readme = "README.md"
repository = "https://github.com/vvilhonen/nethoscope"
version = "0.1.0"

[profile.release]
debug = true

[dependencies]
anyhow = "1"
cpal = "0.13"
pcap = "0.8"
